# zip-utils

./: .clang-format  .gitignore  CHECKLIST.md  DESIGN.md  HACKING.md  MISSING_FEATURES.md  OPTION_MATRIX.md  README.md  TODO.md  compare_zip.py  debug_test.py  document_unzip_output.py  document_zip_output.py  meson.build  meson_options.txt  metadata.md  move_debug.py  unzip-spec.md  unzip.txt  zip-spec.md  zip.txt  zipinfo.txt
.github/workflows/: ci.yml
build-aux/: install-symlinks.sh
common/: crypt.c  crypt.h  platform.h
src/: README.md
src/cli/: cli_common.c  cli_common.h  main_unzip.c  main_zip.c  ops.c  ops.h
src/common/: ctx.c  ctx.h  fileio.c  fileio.h  status.c  strlist.c  strlist.h
src/compression/: bzip2_shim.c  bzip2_shim.h  crc32.c  crc32.h  zipcrypto.c  zipcrypto.h  zlib_shim.c  zlib_shim.h
src/format/: reader.c  reader.h  recovery.c  recovery.h  writer.c  writer.h  zip_headers.h
src/include/: ziputils.h
tests/: parity_common.c  test_comment_edit.py  test_compression.c  test_create_integration.py  test_crypto_integration.py  test_ctx.c  test_entry_comments.py  test_fileio.c  test_list.c  test_list_integration.py  test_logging.py  test_move_option.py  test_no_compress_suffixes.py  test_option_parsing.py  test_output_copy.py  test_parity_gen.c  test_quiet_pager.py  test_reader.c  test_recovery.c  test_split_read.py  test_streaming.py  test_strip_attrs.py  test_strlist.c  test_time_filtering.py  test_unzip_filter.py  test_unzip_integration.py  test_writer.c  test_zip64_large.py  test_zipinfo_integration.py  test_zipnote_edit.py
tests/integration/: test_comments.py  test_list_integration.py  test_recovery.py  test_small_file_compression.py  test_strip_attrs.py  test_unzip_integration.py  test_zip64_integration.py  test_zipinfo_integration.py
tests/parity/: common.c  common.h  test_generated.c
tools/: benchmark_zip.py  compare_zip.py  convert_jsonl_to_c.py  document_unzip_output.py  document_zip_output.py  document_zipinfo_output.py  parity_matrix.sh  run_comparison_docs.sh
unzip/: explode.c  extract.c  match.c  process.c  unxcfg.h  unzip.c  unzpriv.h
zip/: ebcdic.h  osdep.h  revision.h  tailor.h  zip.h  ziperr.h  zipup.c
